# failure-lambda

./: .eslintrc.js  .gitignore  .npmignore  CHANGELOG.md  LICENSE  README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.json  tsconfig.test.json  tsup.config.ts  vitest.config.ts
.github/workflows/: ci.yml
example/: index.js  package-lock.json  package.json  serverless.yml
example/cdk/: .gitignore  package-lock.json  package.json
example/cdk/lib/: failure_lambda_example-stack.ts
example/cdk/test/: failure_lambda_example.test.ts
example/sam/: index.js  package-lock.json  package.json  template.yaml
example/sls/: package-lock.json  package.json  serverless.yml
examples/cdk/: cdk.json  package-lock.json  package.json  tsconfig.json
examples/layer/: template.yaml
examples/sam/: handler-middy.ts  package-lock.json  package.json  template.yaml
examples/sls/: handler.ts  package-lock.json  package.json  serverless.yml
layer/: build.sh  template.yaml  wrapper
layer/dns-intercept/: dns_intercept.c
layer/proxy/: Cargo.toml  Cross.toml
layer/proxy/src/: config.rs  failures.rs  main.rs  proxy.rs
lib/: failure.js
src/: cli.ts  config.ts  index.ts  log.ts  matching.ts  middy.ts  mitm.d.ts  orchestration.ts  types.ts
src/__tests__/: cli-prompts.test.ts  cli-store.test.ts  config.test.ts  denylist.test.ts  failures.test.ts  index.test.ts  middy.test.ts
src/cli/: display.ts  prompts.ts  settings.ts  store.ts
src/failures/: corruption.ts  denylist.ts  diskspace.ts  exception.ts  index.ts  latency.ts  statuscode.ts  timeout.ts
(+9 files in other folders)
